2003-11-25  Christopher Faylor  <cgf@redhat.com>

	* winsup.api/known_bugs.tcl: Remove lseek10 since mknod now works.

2003-11-20  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.api/msgtest.c (main): Revert to use the SIGSYS signal handler.
	* winsup.api/semtest.c (main): Ditto.
	* winsup.api/shmtest.c (main): Ditto.

2003-11-19  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.api/msgtest.c: New file derived from FreeBSD, testing
	XSI Message Queue support.
	* winsup.api/semtest.c: Ditto, testing XSI Semaphore support.
	* winsup.api/shmtest.c: Ditto, testing XSI Shared Memory support.

2003-07-06  Christopher Faylor  <cgf@redhat.com>

	* winsup.api/known_bugs.tcl: Remove gethostid01 from list of known
	bugs.

2003-07-06  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Remove .dat files when cleaning.

2003-07-06  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Remove .d files when cleaning.

2003-05-09  Corinna Vinschen  <corinna@vinschen.de>

	* libltp/include/test.h: Remove gethostid declaration.

2003-04-08  Thomas Pfaff  <tpfaff@gmx.net>

	* winsup.api/pthread/condvar9.c: Fix test.

2003-03-27  Thomas Pfaff  <tpfaff@gmx.net>

	* winsup.api/pthread/rwlock1.c: Remove pthreads-win32 header.
	* winsup.api/pthread/rwlock2.c: Ditto.
	* winsup.api/pthread/rwlock3.c: Ditto.
	* winsup.api/pthread/rwlock4.c: Ditto.
	* winsup.api/pthread/rwlock5.c: Ditto.
	* winsup.api/pthread/rwlock6.c: Ditto.

2003-03-27  Brian Ford  <ford@vss.fsi.com>

	* winsup.api/pthread/condvar7.c (mythread): Cast
	pthread_mutex_unlock argument of pthread_cleanup_push
	to void *, preventing a	compiler warning / testsuite failure.
	* winsup.api/pthread/condvar9.c (mythread): Likewise.
	* winsup.api/pthread/rwlock7.c (main): Use ftime instead of
	_ftime.

2003-03-18  Thomas Pfaff  <tpfaff@gmx.net>

	* winsup.api/pthread/rwlock1.c: New test.
	* winsup.api/pthread/rwlock2.c: Ditto.
	* winsup.api/pthread/rwlock3.c: Ditto.
	* winsup.api/pthread/rwlock4.c: Ditto.