@@ -1,5 +1,5 @@
 set xfail_list [list dup03 dup05 \
-    fcntl05 fcntl07B fcntl09 fcntl10 \
+    fcntl05 fcntl07B \
     lseek04 mknod01 select03 \
     setgroups01 setuid02 \
     ulimit01 unlink06 unlink08 \
